# tech-session-visual-odometry

./: .gitmodules  Dockerfile  README.md  docker_build.sh  docker_connect.sh  docker_run.sh  docker_run_detached.sh
ackermann_vehicle/ackermann_vehicle_description/launch/: ackermann_vehicle.launch
ackermann_vehicle/ackermann_vehicle_description/rviz/: description_config.rviz
ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro  stereo_camera.urdf.xacro
ackermann_vehicle/ackermann_vehicle_gazebo/: package.xml
ackermann_vehicle/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  stereo_camera_calibration.launch
ackermann_vehicle/ackermann_vehicle_gazebo/models/checkerboard/: checkerboard.dae
ackermann_vehicle/ackermann_vehicle_gazebo/models/warehouse/: texture.tga.001.tga  warehouse.dae
ackermann_vehicle/ackermann_vehicle_gazebo/nodes/: ackermann_controller.py
ackermann_vehicle/ackermann_vehicle_gazebo/worlds/: checkerboard.world  empty.world  warehouse.world
cam_info_pub/: CMakeLists.txt  README.md  package.xml
cam_info_pub/launch/: cam_info_pub.launch
cam_info_pub/src/: .publishCameraInfo.cpp.swp  cam_info_pub.cpp
datasets/gazebo/: .gitignore
stereo_calibration/: .gitignore
talker_listener_exercise/: CMakeLists.txt  package.xml
talker_listener_exercise/include/talker_listener_exercise/: listener.h  talker.h
talker_listener_exercise/launch/: talker_listener.launch
talker_listener_exercise/src/: listener.cpp  listener_node.cpp  talker.cpp  talker_node.cpp
talker_listener_exercise/src/talker_listener_exercise/: listener_node.py  talker_node.py
tech_session_visual_odometry/: CMakeLists.txt  package.xml
tf_to_odometry/: CMakeLists.txt  LICENSE  README.md  package.xml
tf_to_odometry/src/: tf_to_odometry.cpp
trajectory_evaluation/: CMakeLists.txt  package.xml  setup.py
trajectory_evaluation/include/trajectory_evaluation/: trajectory_evaluation.h
trajectory_evaluation/src/: trajectory_evaluation.cpp  trajectory_evaluation_node.cpp
trajectory_evaluation/src/trajectory_evaluation/: listener_node.py
visual_odometry/: CMakeLists.txt  package.xml
visual_odometry/config/: rtabmap_default.ini  rtabmap_gazebo.ini  rtabmap_kitti.ini  rtabmap_zed.ini
visual_odometry/launch/: kitti_dataset_vslam.launch  rtabmap.launch  rtabmap_kitti_stereo.launch  rtabmap_realsense_rgbd.launch  rtabmap_zed_rgbd.launch  sim_stereo_vo.launch  sim_vslam.launch  stereo_visual_odometry.launch  vslam.launch
visual_odometry/rviz/: kitti_config.rviz  stereo_odometry_config.rviz
visual_odometry/scripts/: odom_to_path.py  rtabmap_kitti.sh
