<?xml version="1.0"?>
<package format="2">
  <name>cam_info_pub</name>
  <version>0.0.0</version>
  <description>Publish camera info loaded from yaml file</description>
  <maintainer email="george@kapernikov.com">George Kouros</maintainer>
  <license>Copyright (c) 2019 Kapernikov CVBA. All rights reserved.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  
  <export>
  </export>
</package>
